# ChangeLog for genkernel
# Copyright: 
# - 2003-2008 Gentoo Foundation
# - 2008-2011 Various authors (see AUTHORS)
# Distributed under the GPL v2
# $Id$

  06 Feb 2012: Richard Yao <ryao@cs.stonybrook.edu> arch/alpha/modules_load,
  arch/arm/modules_load, arch/ia64/modules_load, arch/mips/modules_load,
  arch/parisc/modules_load, arch/parisc64/modules_load, arch/ppc/modules_load,
  arch/ppc64/modules_load, arch/sparc/modules_load, arch/sparc64/modules_load,
  arch/um/modules_load, arch/x86/modules_load, arch/x86_64/modules_load,
  defaults/busy-config, defaults/initrd.scripts, defaults/linuxrc,
  defaults/modules_load, doc/genkernel.8.txt, gen_cmdline.sh,
  gen_determineargs.sh, gen_initramfs.sh, genkernel:
  This provides ZFS support, to go with the sys-fs/zfs package.

  06 Feb 2012; Robin H. Johnson <robbat2@gentoo.org> gen_initramfs.sh:
  Refactor copy_binaries and multipath slightly for ease of usage and readability.

  06 Feb 2012: Richard Yao <ryao@cs.stonybrook.edu> gen_initramfs.sh:
  Refactor multipath initramfs generation using copy_binaries.

  06 Feb 2012: Richard Yao <ryao@cs.stonybrook.edu> gen_initramfs.sh:
  copy_binaries utility function for putting binaries and librares into
  initramfs (see git commit for full details).

  06 Feb 2012; Robin H. Johnson <robbat2@gentoo.org> defaults/initrd.scripts:
  Support virtio devices, and provide fallback of all remaining devices.

  03 Feb 2012; Sebastian Pipping <sping@gentoo.org> defaults/initrd.scripts:
  Support SD card readers. Patch by Rick Farina

  24 Jan 2012; Sebastian Pipping <sping@gentoo.org> .gitignore, genkernel:
  Bump version to 3.4.24

  24 Jan 2012; Sebastian Pipping <sping@gentoo.org> arch/alpha/kernel-config,
  arch/ia64/kernel-config, arch/ppc/kernel-config, arch/sparc64/kernel-config,
  arch/x86/kernel-config:
  Unset CONFIG_SYSFS_DEPRECATED for udev (bug #335763)

  15 Jan 2012; Sebastian Pipping <sping@gentoo.org> genkernel:
  Bump version to 3.4.23.1
