@@ -319,6 +319,9 @@ GPG_BINCACHE="%%CACHE%%/gnupg-${GPG_VER}-%%ARCH%%.bz2"
 
 # Compress generated initramfs
 #COMPRESS_INITRD="yes"
+# Types of compression: best, xz, lzma, bzip2, gzip, lzop
+# "best" selects the best available compression method
+#COMPRESS_INITRD_TYPE="best"
 
 
 # Create a self-contained env in the initramfs
